--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -77,7 +77,7 @@ jobs:
           fi
 
       - name: Alert on health issues
-        if: failure()
+        if: failure() && steps.prod-health.outputs.status != 'api-not-deployed' && steps.staging-health.outputs.status != 'api-not-deployed'
         uses: actions/github-script@v7
         with:
           script: |
@@ -149,7 +149,7 @@ jobs:
           fi
 
       - name: Alert on SLO breaches
-        if: failure()
+        if: failure() && steps.prod-slo.outputs.slo_status != 'not-deployed'
         uses: actions/github-script@v7
         with:
           script: |
@@ -234,7 +234,7 @@ jobs:
           fi
 
       - name: Alert on performance issues
-        if: failure()
+        if: failure() && steps.performance.outputs.avg_latency != 'N/A'
         uses: actions/github-script@v7
         with:
           script: |
