chore: Disable auto-deployments to prevent failed GitHub Actions runs
- Production is working via manual deployments
- GitHub Actions → Vercel integration has platform issues
- Manual deployments via CLI are reliable and successful
- Will re-enable once Vercel platform issues are resolved

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -1,8 +1,9 @@
 name: Deploy to Production
 
 on:
-  push:
-    branches: [main]
+  # Temporarily disabled auto-deployments due to Vercel platform issues
+  # push:
+  #   branches: [main]
   workflow_dispatch:
     inputs:
       force_deploy:
