--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
   "version": 2,
+  "buildCommand": "./build-and-deploy.sh",
+  "outputDirectory": "frontend/.next",
+  "installCommand": "cd frontend && npm install",
+  "framework": "nextjs",
   "builds": [
     {
       "src": "frontend/package.json",
@@ -25,18 +29,10 @@
       "permanent": true
     }
   ],
-  "env": {
-    "DEPLOY_MODE": "staging",
-    "STRIPE_MODE": "test",
-    "C2PA_MODE": "off",
-    "MIRROR_MODE": "auto",
-    "ALERT_MODE": "slack"
-  },
   "functions": {
     "frontend/src/app/api/**/*.ts": {
       "maxDuration": 30
     }
   },
-  "regions": ["iad1"],
-  "framework": "nextjs"
+  "regions": ["iad1"]
 }
