--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -62,6 +62,20 @@ jobs:
       - name: Run security audit
         run: pnpm audit --audit-level high
 
+      - name: Run Snyk security scan
+        uses: snyk/actions/node@master
+        continue-on-error: true
+        if: ${{ secrets.SNYK_TOKEN != '' }}
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --severity-threshold=high
+
+      - name: Skip Snyk scan (no token)
+        if: ${{ secrets.SNYK_TOKEN == '' }}
+        run: |
+          echo "Skipping Snyk security scan - SNYK_TOKEN not configured"
+
       - name: Check for known vulnerabilities
         run: pnpm audit --json > audit-results.json || true
 
