fix: Add required Supabase env vars to e2e and web_quality workflows

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -30,6 +30,9 @@ jobs:
           cd frontend && pnpm run test:e2e
         env:
           CI: true
+          NEXT_PUBLIC_SUPABASE_URL: https://test.supabase.co
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: test-anon-key-for-ci
+          SUPABASE_SERVICE_ROLE_KEY: test-service-key-for-ci
 
       - name: Upload E2E results
         if: always()
