--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -25,6 +25,11 @@ jobs:
           cd frontend
           pnpm install
 
+      - name: Install Playwright browsers
+        run: |
+          cd frontend
+          pnpm exec playwright install --with-deps chromium
+
       - name: Run E2E tests
         run: |
           cd frontend && pnpm run test:e2e
