fix: Install all Playwright browsers (not just chromium)

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install Playwright browsers
         run: |
           cd frontend
-          pnpm exec playwright install --with-deps chromium
+          pnpm exec playwright install --with-deps
 
       - name: Run E2E tests
         run: |
