--- a/.github/workflows/content_guard.yml
+++ b/.github/workflows/content_guard.yml
@@ -3,6 +3,11 @@ on:
   pull_request:
     branches: [main]
 
+# Auto-cancel in-progress runs when a new commit is pushed
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   guard:
     runs-on: ubuntu-latest
