--- a/.github/workflows/release_gate.yml
+++ b/.github/workflows/release_gate.yml
@@ -2,6 +2,11 @@ name: release_gate
 on:
   workflow_dispatch:
 
+# Auto-cancel in-progress runs when a new commit is pushed
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   gate:
     runs-on: ubuntu-latest
