--- a/.github/workflows/web_quality.yml
+++ b/.github/workflows/web_quality.yml
@@ -5,6 +5,11 @@ on:
   pull_request:
     branches: [main]
 
+# Auto-cancel in-progress runs when a new commit is pushed
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   quality:
     runs-on: ubuntu-latest
